--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -103,6 +103,8 @@ layout: default
                   {% include resume/projects.liquid %}
                 {% when 'awards' %}
                   {% include resume/awards.liquid %}
+                {% when 'honors' %}
+                  {% include resume/honors.liquid %}
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
                 {% when 'publications' %}
